[workspace]
members = [
    "rikctl",
    "scheduler",
    "riklet",
    "controller",
    "proto"
]

[workspace.dependencies]
prost = "0.11"
tonic = "0.8"
protobuf = { version = "3", features = ["with-bytes"] }
tonic-build = "0.8"

# Instrumentation
tracing = "0.1.37"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.16", features = ["std", "fmt", "json"] }