[package]
name = "controller"
version = "1.0.0"
authors = ["Malo <malo.polese@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.deb]
depends = "$auto, systemd"
extended-description = "rik-controller daemon"
section = "admin"
priority = "optional"
assets = [
    ["target/release/controller", "usr/bin/rik-controller", "755"],
    ["service/rik-controller.service", "/lib/systemd/system/rik-controller.service", "644"],
]

[dependencies]
tiny_http = "0.12.0"
chrono = "0.4"
colored = "2"
route-recognizer = "0.3.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
names = "0.14.0"
tonic = { workspace = true }
prost = { workspace = true}
tracing = { workspace = true }
tokio = { version = "1.6.1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.6"
dotenv = "0.15.0"
nix = "0.26.2"
rstest = "0.16.0"
uuid = { version = "1.2.2", features = ["serde", "v4"] }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
rstest = "0.16.0"

[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled"]

[dependencies.proto]
path = "../proto"

[dependencies.definition]
path = "../crates/definition"
