[package]
name = "controller"
version = "1.0.0"
authors = ["Malo <malo.polese@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.deb]
depends = "$auto, systemd"
extended-description = "rik-controller daemon"
section = "admin"
priority = "optional"
assets = [
    ["target/release/controller", "usr/bin/rik-controller", "755"],
    ["service/rik-controller.service", "/lib/systemd/system/rik-controller.service", "644"],
]

[dependencies]
tiny_http = "0.12.0"
chrono = "0.4"
colored = "2"
route-recognizer = "0.3.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.103"
names = "0.14.0"
tonic = { workspace = true }
prost = { workspace = true}
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.6"
async-trait = "0.1.64"
dotenv = "0.15.0"
nix = "0.26.2"
rstest = "0.16.0"
uuid = { version = "1.3.1", features = ["serde", "v4"] }
backoff = { version = "0.4.0", features = ["tokio"]}
rand = "0.8.4"
thiserror = "1.0.40"
anyhow = "1.0.71"

# Instrumentation
tracing = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
rstest = "0.16.0"

[dependencies.rusqlite]
version = "0.29.0"
features = ["bundled"]

[dependencies.proto]
path = "../proto"

[dependencies.definition]
path = "../crates/definition"
