[package]
name = "proto"
version = "0.2.1"
authors = ["Alexandre Burgoni <alexandre.burgoni@etu.umontpellier.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7.0"
tonic = "0.4.3"
protobuf = { version = "2", features = ["with-bytes"] }

[build-dependencies]
tonic-build = "0.4.2"
