[package]
name = "proto"
version = "0.2.1"
authors = ["Alexandre Burgoni <alexandre.burgoni@etu.umontpellier.fr>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
prost.workspace = true
tonic.workspace = true
protobuf.workspace = true

[build-dependencies]
tonic-build.workspace = true
