[package]
name = "rikctl"
version = "0.1.0"
edition = "2021"
authors = []

[dependencies]
config = { version = "0.13.3", features = ["yaml"] }
tokio = {version = "1.0", features = ["full"]}
async-trait = "0.1.57"
thiserror = "1.0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.10"
clap = { version = "4.0.18", features = ["derive"] }
reqwest = "0.11.14"
prettytable-rs = "0.9.0"
anyhow = "1.0.66"
dirs = "4.0.0"

[dev-dependencies]
tempfile = "3.4.0"
serial_test = "1.0.0"