[package]
name = "rikctl"
version = "0.1.0"
edition = "2021"
authors = []

[dependencies]
config = { version = "0.13.3", features = ["yaml"] }
tokio = {version = "1.0", features = ["full"]}
async-trait = "0.1.57"
thiserror = "1.0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.21"
clap = { version = "4.2.1", features = ["derive"] }
reqwest = "0.11.14"
prettytable-rs = "0.10.0"
anyhow = "1.0.71"
dirs = "5.0.0"

# Instrumentation
tracing = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3.4.0"
serial_test = "2.0.0"
pretty_assertions = "1.3.0"
