[package]
name = "riklet"
version = "1.0.0"
authors = [
    "Thomas Gouveia <thomas.gouveia@etu.umontpellier.fr>",
    "Hugo Amalric <hugo.amalric@etu.umontpellier.fr>",
    "Sylvain Renaud <sylvain.reynaud@etu.umontpellier.fr>"
]
edition = "2018"
description = "The node agent responsible to execute workloads on a Rik cluster node."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
depends = "$auto, systemd"
extended-description = "riklet daemon"
section = "admin"
priority = "optional"
assets = [
    ["target/release/riklet", "usr/bin/riklet", "755"],
    ["service/riklet.service", "/lib/systemd/system/riklet.service", "644"],
]

[dependencies]
cri = { path = "crates/cri" }
oci = { path = "crates/oci" }
shared = { path = "crates/shared" }
node_metrics = { path = "crates/node_metrics" }
serde_json = "1.0.64"
daemonize = "0.4.1"
log = "0.4.14"
env_logger = "0.8.4"
tonic.workspace = true
prost.workspace = true
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.15"
serde = { version = "1.0", features = ["derive"] }
tokio-stream = "0.1.6"
async-trait = "0.1.50"
snafu = "0.6.10"
libc="0.2.97"
toml="0.5.8"
uuid = { version = "0.8", features = ["v4"] }
clap = {version = "4.0.26", features = ["derive"]}
nix="0.21.0"
gethostname = "0.2.1"

[dependencies.proto]
path = "../proto"
