[package]
name = "riklet"
version = "1.0.0"
authors = [
    "Thomas Gouveia <thomas.gouveia@etu.umontpellier.fr>",
    "Hugo Amalric <hugo.amalric@etu.umontpellier.fr>",
    "Sylvain Renaud <sylvain.reynaud@etu.umontpellier.fr>"
]
edition = "2018"
description = "The node agent responsible to execute workloads on a Rik cluster node."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
depends = "$auto, systemd"
extended-description = "riklet daemon"
section = "admin"
priority = "optional"
assets = [
    ["target/release/riklet", "usr/bin/riklet", "755"],
    ["service/riklet.service", "/lib/systemd/system/riklet.service", "644"],
]

[dependencies]
cri = { path = "crates/cri" }
oci = { path = "crates/oci" }
shared = { path = "crates/shared" }
node_metrics = { path = "crates/node_metrics" }
serde_json = "1.0.91"
daemonize = "0.5.0"
tonic.workspace = true
prost.workspace = true
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.15"
serde = { version = "1.0.162", features = ["derive"] }
tokio-stream = "0.1.6"
async-trait = "0.1.50"
libc="0.2.142"
toml="0.7.3"
uuid = { version = "1.3", features = ["v4"] }
clap = { version = "4.0.26", features = ["derive", "env"] }
nix="0.26.2"
gethostname = "0.4.1"
firepilot = "1.1.0"
devices = { git = "https://github.com/firecracker-microvm/firecracker.git", tag = "v1.3.1" }
rate_limiter = { git = "https://github.com/firecracker-microvm/firecracker.git", tag = "v1.3.1" }
utils = { git = "https://github.com/firecracker-microvm/firecracker.git", tag = "v1.3.1" }
rand = "0.8.5"
rtnetlink = "0.12.0"
ipnetwork="0.20.0"
iptables="0.5.0"
url = { version = "2.3.1", features = ["serde"] }
curl = "0.4.44"
lz4 = "1.23.1"
thiserror = "1.0.38"
derive_more = "0.99.17"
anyhow = "1.0.71"

# Instrumentation
tracing = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-timing = { workspace = true }
once_cell = "1.17.1"

[dependencies.definition]
path = "../crates/definition"


[dependencies.proto]
path = "../proto"

[dev-dependencies]
pretty_assertions = "1.3.0"
netlink-packet-route= "0.15.0"
serial_test = "2.0.0"