[package]
name = "cli"
version = "0.1.0"
authors = ["Julian Labatut <julian.labatut@etu.umontpellier.fr>", "Mathias Flagey <mathias.flagey@etu.umontpellier.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httpclient = { path = "httpclient" }

[workspace]
members = [
    "httpclient"
]
