[package]
name = "riktl"
version = "0.1.0"
authors = ["Julian Labatut <julian.labatut@etu.umontpellier.fr>", "Mathias Flagey <mathias.flagey@etu.umontpellier.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httpclient = { path = "httpclient" }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
prettytable-rs = "^0.8"
clap = { git = "https://github.com/clap-rs/clap", rev = "89d1519"}
