[package]
name = "scheduler"
version = "1.0.0"
authors = ["Protocole <alexandre.burgoni@etu.umontpellier.fr>"]
edition = "2018"

[package.metadata.deb]
depends = "$auto, systemd"
extended-description = "rik scheduler daemon"
section = "admin"
priority = "optional"
assets = [
    ["target/release/scheduler", "usr/bin/scheduler", "755"],
    ["service/scheduler.service", "/lib/systemd/system/scheduler.service", "644"],
]

[dependencies]
tonic.workspace = true
tokio-stream = "0.1.6"
env_logger = "0.10.0"
log = "0.4.14"
rand = "0.8.4"
clap = "2.33.3"
serde = "1.0.126"
serde_json = "1.0.64"

[dependencies.tokio]
version = "1.6.1"
features = ["rt-multi-thread", "macros", "sync", "time"]

[dependencies.proto]
path = "../proto"

[dependencies.node_metrics]
path = "../riklet/crates/node_metrics"

[dependencies.definition]
path = "../crates/definition"
