[package]
name = "definition"
version = "0.1.0"
authors = ["croumegous <cyril.roumegous@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
url = { version = "2.3.1", features = ["serde"] }