[package]
name = "network"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtnetlink = "0.8.0"
futures = "0.3.11"
tokio = { version = "1.0.1", features = ["full"] }
ipnetwork = "0.17.0"
clap = { version = "3.0.0-beta.2" }