[package]
name = "cri"
version = "0.1.0"
authors = ["Thomas Gouveia <thomas.gouveia@ioterop.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
chrono = { version = "0.4.10", features = ["serde"] }
async-trait = "0.1.50"
futures = "0.3.1"
tokio = { version = "1.7.0", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
libc="0.2.97"
thiserror = "1.0.38"
# Instrumentation
tracing = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-timing = { workspace = true }