[package]
name = "shared"
version = "0.1.0"
authors = ["Thomas Gouveia <thomas.gouveia@ioterop.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.20"
tar = "0.4.35"
rand = "0.8.4"
ipnetwork = "0.20.0"
# Instrumentation
tracing = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-timing = { workspace = true }