[package]
authors = ["sylvain.reynaud <sylvain.reynaud@etu.umontpellier.fr>"]
edition = "2018"
name = "node-metrics"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0"
sysinfo = "0.19.0"

[[example]]
name = "simple"
